--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>com.tugalsan.api.file.html</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>com.tugalsan.api.coronator</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     
     <build>
