--- a/pom.xml
+++ b/pom.xml
@@ -96,12 +96,11 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.14.0</version>
                 <configuration>
-                    <release>25</release><!--prop.jdk-->
-                    <!--  <enablePreview>true</enablePreview>
+                    <release>25</release>
+                    <enablePreview>true</enablePreview>
                     <compilerArgs>
-                       <arg>- -add-modules</arg>
-                        <arg>jdk.incubator.vector</arg>
-                    </compilerArgs> -->
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
